k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-app
  template:
    metadata:
      labels:
        app: appointment-app
    spec:
      containers:
      - name: app
        image: arn:aws:ecr:us-west-1:539935451710:repository/devops-eks/appointment-app:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
