k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-app-service
spec:
  type: ClusterIP
  selector:
    app: appointment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
